@@ -288,14 +288,20 @@ class SelectionValidator(StringBaseValidator):
         if value == "" and not field.get_value('required'):
             return value
 
-        # get the name and the value from the list of items
-        for item_name, item_value in field.get_value('items'):
+        # get the text and the value from the list of items
+        for item in field.get_value('items'):
+            try:
+                option_text, option_value = item
+            except ValueError:
+                option_text = item
+                option_value = item
+            
             # check if the value is equal to the *string* version of
-            # item_value; if that's the case, we can return the *original*
+            # option_value; if that's the case, we can return the *original*
             # value in the list (not the submitted value). This way, integers
             # will remain integers.
-            if str(item_value) == value:
-                return item_value
+            if str(option_value) == value:
+                return option_value
             
         # if we didn't find the value, return error
         self.raise_error('unknown_selection', field)
